--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -19,7 +19,8 @@
       "@united/book-list": ["libs/book-list/src/index.ts"],
       "@united/counter": ["libs/counter/src/index.ts"],
       "@united/my-lib": ["libs/my-lib/src/index.ts"],
-      "@united/social": ["libs/social/src/index.ts"]
+      "@united/social": ["libs/social/src/index.ts"],
+      "@united/timeline": ["libs/timeline/src/index.ts"]
     }
   },
   "exclude": ["node_modules", "tmp"]
