--- a/angular.json
+++ b/angular.json
@@ -9,6 +9,7 @@
     "my-app": "apps/my-app",
     "my-app-e2e": "apps/my-app-e2e",
     "my-lib": "libs/my-lib",
+    "navigation": "libs/navigation",
     "social": "libs/social",
     "test": "apps/test",
     "test-e2e": "apps/test-e2e"
