--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -19,6 +19,7 @@
       "@united/book-list": ["libs/book-list/src/index.ts"],
       "@united/counter": ["libs/counter/src/index.ts"],
       "@united/my-lib": ["libs/my-lib/src/index.ts"],
+      "@united/navigation": ["libs/navigation/src/index.ts"],
       "@united/social": ["libs/social/src/index.ts"]
     }
   },
