cross lib usage

--- a/angular.json
+++ b/angular.json
@@ -4,11 +4,13 @@
     "auth": "libs/auth",
     "book-list": "libs/book-list",
     "counter": "libs/counter",
+    "instrument": "libs/instrument",
     "ionic-test": "apps/ionic-test",
     "ionic-test-e2e": "apps/ionic-test-e2e",
     "my-app": "apps/my-app",
     "my-app-e2e": "apps/my-app-e2e",
     "my-lib": "libs/my-lib",
+    "myhome": "libs/myhome",
     "navigation": "libs/navigation",
     "social": "libs/social",
     "test": "apps/test",
