--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -18,7 +18,9 @@
       "@united/auth": ["libs/auth/src/index.ts"],
       "@united/book-list": ["libs/book-list/src/index.ts"],
       "@united/counter": ["libs/counter/src/index.ts"],
+      "@united/instrument": ["libs/instrument/src/index.ts"],
       "@united/my-lib": ["libs/my-lib/src/index.ts"],
+      "@united/myhome": ["libs/myhome/src/index.ts"],
       "@united/navigation": ["libs/navigation/src/index.ts"],
       "@united/social": ["libs/social/src/index.ts"]
     }
