--- a/apps/my-app-e2e/project.json
+++ b/apps/my-app-e2e/project.json
@@ -1,4 +1,5 @@
 {
+  "$schema": "../../node_modules/nx/schemas/project-schema.json",
   "sourceRoot": "apps/my-app-e2e/src",
   "projectType": "application",
   "targets": {
@@ -16,12 +17,18 @@
     },
     "lint": {
       "executor": "@nrwl/linter:eslint",
-      "outputs": ["{options.outputFile}"],
+      "outputs": [
+        "{options.outputFile}"
+      ],
       "options": {
-        "lintFilePatterns": ["apps/my-app-e2e/**/*.{js,ts}"]
+        "lintFilePatterns": [
+          "apps/my-app-e2e/**/*.{js,ts}"
+        ]
       }
     }
   },
   "tags": [],
-  "implicitDependencies": ["my-app"]
+  "implicitDependencies": [
+    "my-app"
+  ]
 }
