--- a/apps/my-app/project.json
+++ b/apps/my-app/project.json
@@ -1,11 +1,14 @@
 {
+  "$schema": "../../node_modules/nx/schemas/project-schema.json",
   "projectType": "application",
   "sourceRoot": "apps/my-app/src",
   "prefix": "united",
   "targets": {
     "build": {
       "executor": "@angular-devkit/build-angular:browser",
-      "outputs": ["{options.outputPath}"],
+      "outputs": [
+        "{options.outputPath}"
+      ],
       "options": {
         "outputPath": "dist/apps/my-app",
         "index": "apps/my-app/src/index.html",
@@ -13,8 +16,13 @@
         "polyfills": "apps/my-app/src/polyfills.ts",
         "tsConfig": "apps/my-app/tsconfig.app.json",
         "inlineStyleLanguage": "scss",
-        "assets": ["apps/my-app/src/favicon.ico", "apps/my-app/src/assets"],
-        "styles": ["apps/my-app/src/styles.scss"],
+        "assets": [
+          "apps/my-app/src/favicon.ico",
+          "apps/my-app/src/assets"
+        ],
+        "styles": [
+          "apps/my-app/src/styles.scss"
+        ],
         "scripts": []
       },
       "configurations": {
@@ -79,7 +87,9 @@
     },
     "test": {
       "executor": "@nrwl/jest:jest",
-      "outputs": ["coverage/apps/my-app"],
+      "outputs": [
+        "coverage/apps/my-app"
+      ],
       "options": {
         "jestConfig": "apps/my-app/jest.config.js",
         "passWithNoTests": true
