--- a/libs/auth/project.json
+++ b/libs/auth/project.json
@@ -1,11 +1,14 @@
 {
+  "$schema": "../../node_modules/nx/schemas/project-schema.json",
   "projectType": "library",
   "sourceRoot": "libs/auth/src",
   "prefix": "united",
   "targets": {
     "test": {
       "executor": "@nrwl/jest:jest",
-      "outputs": ["coverage/libs/auth"],
+      "outputs": [
+        "coverage/libs/auth"
+      ],
       "options": {
         "jestConfig": "libs/auth/jest.config.js",
         "passWithNoTests": true
@@ -14,7 +17,10 @@
     "lint": {
       "executor": "@nrwl/linter:eslint",
       "options": {
-        "lintFilePatterns": ["libs/auth/src/**/*.ts", "libs/auth/src/**/*.html"]
+        "lintFilePatterns": [
+          "libs/auth/src/**/*.ts",
+          "libs/auth/src/**/*.html"
+        ]
       }
     }
   },
