--- a/package.json
+++ b/package.json
@@ -11,64 +11,66 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~13.2.0",
-    "@angular/common": "~13.2.0",
-    "@angular/compiler": "~13.2.0",
-    "@angular/core": "~13.2.0",
-    "@angular/forms": "~13.2.0",
-    "@angular/material": "^14.0.1",
-    "@angular/platform-browser": "~13.2.0",
-    "@angular/platform-browser-dynamic": "~13.2.0",
-    "@angular/router": "~13.2.0",
+    "@angular/animations": "14.0.1",
+    "@angular/common": "14.0.1",
+    "@angular/compiler": "14.0.1",
+    "@angular/core": "14.0.1",
+    "@angular/forms": "14.0.1",
+    "@angular/material": "14.0.1",
+    "@angular/platform-browser": "14.0.1",
+    "@angular/platform-browser-dynamic": "14.0.1",
+    "@angular/router": "14.0.1",
     "@capacitor/core": "^3.2.5",
     "@ionic/angular": "^6.1.6",
-    "@ngrx/component-store": "~13.0.0",
-    "@ngrx/effects": "~13.0.0",
-    "@ngrx/entity": "~13.0.0",
-    "@ngrx/router-store": "~13.0.0",
-    "@ngrx/store": "~13.0.0",
+    "@ngrx/component-store": "13.2.0",
+    "@ngrx/effects": "13.2.0",
+    "@ngrx/entity": "13.2.0",
+    "@ngrx/router-store": "13.2.0",
+    "@ngrx/store": "13.2.0",
     "@nrwl/angular": "13.9.2",
     "@nxtend/capacitor": "^13.0.0",
     "rxjs": "~7.4.0",
+    "swiper": "^8.2.3",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~13.2.0",
-    "@angular-eslint/eslint-plugin": "~13.0.1",
-    "@angular-eslint/eslint-plugin-template": "~13.0.1",
-    "@angular-eslint/template-parser": "~13.0.1",
-    "@angular/cli": "~13.2.0",
-    "@angular/compiler-cli": "~13.2.0",
-    "@angular/language-service": "~13.2.0",
+    "@angular-devkit/build-angular": "14.0.1",
+    "@angular-eslint/eslint-plugin": "13.2.1",
+    "@angular-eslint/eslint-plugin-template": "13.2.1",
+    "@angular-eslint/template-parser": "13.2.1",
+    "@angular/cli": "13.3.7",
+    "@angular/compiler-cli": "14.0.1",
+    "@angular/language-service": "14.0.1",
     "@capacitor/android": "^3.2.5",
     "@capacitor/cli": "^3.2.5",
     "@capacitor/ios": "^3.2.5",
-    "@ngrx/schematics": "~13.0.0",
-    "@ngrx/store-devtools": "~13.0.0",
-    "@nrwl/angular": "^13.0.0",
+    "@ngrx/schematics": "13.2.0",
+    "@ngrx/store-devtools": "13.2.0",
+    "@nrwl/angular": "14.2.4",
     "@nrwl/cli": "13.9.2",
-    "@nrwl/cypress": "13.9.2",
-    "@nrwl/eslint-plugin-nx": "13.9.2",
-    "@nrwl/jest": "13.9.2",
-    "@nrwl/linter": "13.9.2",
-    "@nrwl/workspace": "13.9.2",
+    "@nrwl/cypress": "14.2.4",
+    "@nrwl/eslint-plugin-nx": "14.2.4",
+    "@nrwl/jest": "14.2.4",
+    "@nrwl/linter": "14.2.4",
+    "@nrwl/workspace": "14.2.4",
     "@nxtend/capacitor": "^13.0.0",
     "@nxtend/ionic-angular": "^13.1.0",
-    "@types/jest": "27.0.2",
+    "@types/jest": "27.4.1",
     "@types/node": "16.11.7",
-    "@typescript-eslint/eslint-plugin": "~5.10.0",
-    "@typescript-eslint/parser": "~5.10.0",
+    "@typescript-eslint/eslint-plugin": "5.24.0",
+    "@typescript-eslint/parser": "5.24.0",
     "cypress": "^9.1.0",
-    "eslint": "~8.7.0",
+    "eslint": "8.15.0",
     "eslint-config-prettier": "8.1.0",
     "eslint-plugin-cypress": "^2.10.3",
     "jasmine-marbles": "~0.9.1",
-    "jest": "27.2.3",
-    "jest-preset-angular": "11.1.1",
-    "nx": "13.9.2",
-    "prettier": "^2.5.1",
-    "ts-jest": "27.0.5",
-    "typescript": "~4.5.2"
+    "jest": "27.5.1",
+    "jest-preset-angular": "11.1.2",
+    "nx": "14.2.4",
+    "prettier": "2.6.2",
+    "ts-jest": "27.1.4",
+    "typescript": "4.7.3"
   }
 }
+
