--- a/package.json
+++ b/package.json
@@ -39,7 +39,7 @@
     "@angular-eslint/eslint-plugin": "13.2.1",
     "@angular-eslint/eslint-plugin-template": "13.2.1",
     "@angular-eslint/template-parser": "13.2.1",
-    "@angular/cli": "13.3.7",
+    "@angular/cli": "~14.0.0",
     "@angular/compiler-cli": "14.0.1",
     "@angular/language-service": "14.0.1",
     "@capacitor/android": "^3.2.5",
@@ -73,4 +73,3 @@
     "typescript": "4.7.3"
   }
 }
-
