--- a/libs/auth/project.json
+++ b/libs/auth/project.json
@@ -6,21 +6,16 @@
   "targets": {
     "test": {
       "executor": "@nrwl/jest:jest",
-      "outputs": [
-        "coverage/libs/auth"
-      ],
+      "outputs": ["coverage/libs/auth"],
       "options": {
-        "jestConfig": "libs/auth/jest.config.js",
+        "jestConfig": "libs/auth/jest.config.ts",
         "passWithNoTests": true
       }
     },
     "lint": {
       "executor": "@nrwl/linter:eslint",
       "options": {
-        "lintFilePatterns": [
-          "libs/auth/src/**/*.ts",
-          "libs/auth/src/**/*.html"
-        ]
+        "lintFilePatterns": ["libs/auth/src/**/*.ts", "libs/auth/src/**/*.html"]
       }
     }
   },
