--- a/libs/counter/project.json
+++ b/libs/counter/project.json
@@ -6,11 +6,9 @@
   "targets": {
     "test": {
       "executor": "@nrwl/jest:jest",
-      "outputs": [
-        "coverage/libs/counter"
-      ],
+      "outputs": ["coverage/libs/counter"],
       "options": {
-        "jestConfig": "libs/counter/jest.config.js",
+        "jestConfig": "libs/counter/jest.config.ts",
         "passWithNoTests": true
       }
     },
