fixed assettag routing

--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "@angular/platform-browser-dynamic": "14.0.1",
     "@angular/router": "14.0.1",
     "@capacitor/core": "^3.2.5",
-    "@ionic/angular": "^6.1.6",
+    "@ionic/angular": "^6.1.9",
+    "@ionic/angular-server": "^6.1.9",
     "@ngrx/component-store": "13.2.0",
     "@ngrx/effects": "13.2.0",
     "@ngrx/entity": "13.2.0",
